infra/k8s/watch/fusionauth.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hooli-poc
  name: fusionauth-srv
spec:
  selector:
    app: fusionauth
  ports:
    - name: admin
      protocol: TCP
      port: 9011
      targetPort: 9011
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hooli-poc
  name: fusionauth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
    spec:
      containers:
        - name: fusionauth
          image: fusionauth/fusionauth-app:1.25.0
          # resources:
          #   limits:
          #     memory: "1024m"
          #     cpu: "2000m"
          ports:
            - containerPort: 9011
          volumeMounts:
            - name: fusionauth-config-volume
              mountPath: /usr/local/fusionauth/kickstart
      volumes:
        - name: fusionauth-config-volume
          configMap:
            name: fusionauth-kickstart-config
