infra/k8s/watch/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hooli-poc
  name: mysql-srv
spec:
  selector:
    app: mysql
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hooli-poc
  name: mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/bash
                  - -c
                  - >
                    cd usr/local/scripts;
                    ./init-dbs.sh;
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              subPath: "mysql"
              name: mysql-data
            - mountPath: "/usr/local/scripts"
              name: mysql-createdb
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: hooli-poc-volume
        - name: mysql-createdb
          configMap:
            name: mysql-createdb-script
            defaultMode: 0755
