infra/k8s/watch/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hooli-poc
  name: rabbitmq-srv
spec:
  selector:
    app: rabbitmq
  ports:
    - name: mq-management
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: mq
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hooli-poc
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.6-management
          # resources:
          #   limits:
          #     memory: "1024m"
          #     cpu: "2000m"
          ports:
            - containerPort: 5672
          volumeMounts:
          - name: rabbitmq-config-volume
            mountPath: /etc/rabbitmq/files
          - name: tmp-config
            mountPath: /etc/rabbitmq
      volumes:
        - name: tmp-config
          emptyDir: {}
        - name: rabbitmq-config-volume
          configMap:
            name: rabbitmq-config
