infra/k8s/watch/redis.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hooli-poc
  name: redis-srv
spec:
  selector:
    app: redis
  ports:
    - port: 6379
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hooli-poc
  name: redis-depl
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5-alpine
        ports:
        - containerPort: 6379
