infra/k8s/watch/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hooli-poc
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: auth.hooli.devl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fusionauth-srv
                port: 
                  number: 9011
    - host: api.hooli.devl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port: 
                  number: 3000
